# Bakkarbeit

./: .gitignore  README.md
Proposal/: thesis.aux  thesis.out  thesis.tex  thesis.toc  titlepage.aux  titlepage_en.aux  titlepage_en.tex
Proposal/chapters/: abstract_de.tex  abstract_en.tex
doc/: GForthMakefile.dia  STRUCTURE.txt
doc/research/: digital-libraries  digital-libraries~  notes  performance.eps  search-words
doc/tex-Bachelor's thesis/: bibliography.bib  example.acn  example.acr  example.alg  example.aux  example.blg  example.glg  example.glo  example.glsdefs  example.idx  example.ilg  example.ist  example.loa  example.lof  example.lot  example.out  example.toc  structure_1.2.ps  thesis.alg  thesis.aux  thesis.bbl  thesis.blg  thesis.dvi  thesis.glg  thesis.glo  thesis.gls  thesis.glsdefs  thesis.ist  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc  thesis.txss  vutinfth.ilg
doc/tex-Bachelor's thesis_old-version/: TUINFDA.sty  thesis.tex  thesis.toc  titlepage.aux  titlepage_en.aux
doc/tex-Proposal/: thesis.aux  thesis.out  thesis.tex  thesis.toc  titlepage.aux  titlepage.tex  titlepage_en.aux  titlepage_en.tex
gforth-0.7.3/: config.status  envos.fs  gforth-ll-reg  gforth-noll-reg  kernel.tags  kernl16b.fi  kernl16l.fi  kernl32b.fi  kernl32l.fi  kernl64b.fi  kernl64l.fi  prim  prim-fast.b  prim.b
gforth-0.7.3/engine/: Makefile  config.h  costs.i  gforth-ll  gforth-noll  prim.i  prim_names.i  prim_superend.i  profile.i  super2.i
gforth-0.7.3/kernel/: aliases.fs  basics.fs  prim.fs
research/: search-words  search-words~
src/brainless-0.1.2/: Makefile.am  Makefile.in  README  benchmark.fs  board.fs  brainless.1  brainless.fs  brainless.in  brainless.lsm.in  brainless.spec.in  configure  configure.ac  create-occurences.txt  drawing.fs  environ.fs  epd.fs  eval.fs  flyeval.fs  hash.fs  history.fs  killer.fs  mem-access.dot  mem-access.ps  moveconv.fs  movegen.fs  moves.fs  null.fs  options.fs  polymetric_trace1.txt  polymetric_trace1_2_executions.txt  polymetric_trace1_hierarchy.txt  profiler.fs  quiescence.fs  repeat.fs  search.fs  searchdefs.fs  sglmove.fs  sorting.fs  string.fs  tax_words_only.txt  (+16 more)
src/dotty/: fa.lefty  gfvis.dot  gfvis.lefty  graph.dot  table.dot
src/gforth-0-7-3/: BUILD-FROM-SCRATCH  Makefile.in  configure.in  debug.fs  gfvis.fs  gfvis.ps  prim  see.fs  test.fs
src/gforth-0.7.3/: Makefile.in  configure.in  envos.fs  gfvis.fs  plustest.fs  prim  redefine-d.fs  (+2 more)
(+101 files in other folders)
